--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Shuimu's github homepage
-description: This is ShuiMu's github homepage.
+title: Shuimu's web resume
+description: This is ShuiMu's web resume.
